[gd_scene load_steps=19 format=3 uid="uid://bbjkia2lowqon"]

[ext_resource type="PackedScene" uid="uid://de6hy5siiftlw" path="res://furniture/door/room_door_animation/scene.gltf" id="1_nu3f6"]
[ext_resource type="Script" uid="uid://qpihv6rykf0i" path="res://furniture/door/door.gd" id="2_dch8f"]
[ext_resource type="Script" uid="uid://dnocscyviv226" path="res://script/interactable/interactable.gd" id="2_s446a"]
[ext_resource type="AudioStream" uid="uid://bj7thlbe65sup" path="res://furniture/door/doorOpen_1.ogg" id="3_2a278"]
[ext_resource type="Animation" uid="uid://bgbnuequyoj03" path="res://furniture/door/door_animation.res" id="3_wdws3"]
[ext_resource type="AudioStream" uid="uid://bi46jtvuofedk" path="res://furniture/door/doorOpen_2.ogg" id="4_wfjhv"]
[ext_resource type="PackedScene" uid="uid://bt7h1m6nl31qa" path="res://furniture/door/planks/plank_1/plank_1.gltf" id="7_gh2qx"]
[ext_resource type="PackedScene" uid="uid://c6s1a54o3kkrb" path="res://furniture/door/planks/plank_2/plank_2.gltf" id="8_x7r50"]
[ext_resource type="PackedScene" uid="uid://bspehjg782phi" path="res://furniture/door/planks/plank_3/plank_3.gltf" id="9_xpupl"]
[ext_resource type="PackedScene" uid="uid://bxdsmfwtlgqm7" path="res://furniture/door/planks/plank_4/plank_4.gltf" id="10_th7kg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p4dlk"]
size = Vector3(0.817505, 1.97674, 0.0354614)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1sj1c"]
playback_mode = 1
streams_count = 2
stream_0/stream = ExtResource("3_2a278")
stream_1/stream = ExtResource("4_wfjhv")

[sub_resource type="BoxShape3D" id="BoxShape3D_7djw8"]
size = Vector3(0.816193, 1.95819, 0.0653152)

[sub_resource type="Animation" id="Animation_nrtu6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OpenCamera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.58451, -0.596645)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("OpenCamera:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 3.14159, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bqqq5"]
_data = {
&"Default Take": ExtResource("3_wdws3"),
&"RESET": SubResource("Animation_nrtu6")
}

[sub_resource type="Animation" id="Animation_h5uq7"]
resource_name = "open"
length = 2.04
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002/Plane_005")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, -0.000413645, 1, 0.0333333, 1, 0, 0, -0.00152013, 0.999999, 0.0666666, 1, 0, 0, -0.0034612, 0.999994, 0.0999999, 1, 0, 0, -0.00624111, 0.999981, 0.133333, 1, 0, 0, -0.0101454, 0.999949, 0.166667, 1, 0, 0, -0.0148951, 0.999889, 0.2, 1, 0, 0, -0.0204897, 0.99979, 0.233333, 1, 0, 0, -0.0269278, 0.999637, 0.266667, 1, 0, 0, -0.0342066, 0.999415, 0.3, 1, 0, 0, -0.0425975, 0.999092, 0.333333, 1, 0, 0, -0.0518109, 0.998657, 0.366667, 1, 0, 0, -0.061836, 0.998086, 0.4, 1, 0, 0, -0.0726602, 0.997357, 0.433333, 1, 0, 0, -0.0842689, 0.996443, 0.466667, 1, 0, 0, -0.0968935, 0.995295, 0.5, 1, 0, 0, -0.110246, 0.993904, 0.533333, 1, 0, 0, -0.1243, 0.992245, 0.566667, 1, 0, 0, -0.139026, 0.990289, 0.6, 1, 0, 0, -0.154395, 0.988009, 0.633333, 1, 0, 0, -0.170567, 0.985346, 0.666667, 1, 0, 0, -0.187276, 0.982307, 0.7, 1, 0, 0, -0.204479, 0.978871, 0.733333, 1, 0, 0, -0.22213, 0.975017, 0.766667, 1, 0, 0, -0.240181, 0.970728, 0.8, 1, 0, 0, -0.258699, 0.965958, 0.833333, 1, 0, 0, -0.27747, 0.960734, 0.866667, 1, 0, 0, -0.296439, 0.955052, 0.9, 1, 0, 0, -0.315548, 0.94891, 1.1, 1, 0, 0, -0.429616, 0.903012, 1.13333, 1, 0, 0, -0.447854, 0.894107, 1.16667, 1, 0, 0, -0.46571, 0.884938, 1.2, 1, 0, 0, -0.483141, 0.875543, 1.23333, 1, 0, 0, -0.500108, 0.865963, 1.26667, 1, 0, 0, -0.516575, 0.856242, 1.3, 1, 0, 0, -0.532372, 0.846511, 1.33333, 1, 0, 0, -0.547578, 0.836755, 1.36667, 1, 0, 0, -0.562172, 0.82702, 1.4, 1, 0, 0, -0.576136, 0.817354, 1.43333, 1, 0, 0, -0.589454, 0.807802, 1.46667, 1, 0, 0, -0.601933, 0.798546, 1.5, 1, 0, 0, -0.61373, 0.789516, 1.53333, 1, 0, 0, -0.624841, 0.780752, 1.56667, 1, 0, 0, -0.635266, 0.772294, 1.6, 1, 0, 0, -0.645005, 0.764179, 1.63333, 1, 0, 0, -0.653859, 0.756616, 1.66667, 1, 0, 0, -0.662029, 0.749478, 1.7, 1, 0, 0, -0.669521, 0.742793, 1.73333, 1, 0, 0, -0.676344, 0.736586, 1.76667, 1, 0, 0, -0.682505, 0.730881, 1.8, 1, 0, 0, -0.68781, 0.725891, 1.83333, 1, 0, 0, -0.69247, 0.721447, 1.86667, 1, 0, 0, -0.696496, 0.717561, 1.9, 1, 0, 0, -0.699897, 0.714244, 1.93333, 1, 0, 0, -0.70268, 0.711506, 1.96667, 1, 0, 0, -0.704655, 0.70955, 2, 1, 0, 0, -0.706031, 0.708181, 2.03333, 1, 0, 0, -0.706814, 0.707399)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002/Plane_001/Plane_003")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0.0999999, 1, 0.850496, 0.0166004, 0.78184, 0.733333, 1, 0.851522, 0.0166004, 0.78184)
tracks/2/type = "rotation_3d"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002/Plane_001/Circle_002")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = PackedFloat32Array(-0.0333334, 1, 0, 0, 0, 1, 0, 1, -1.1363e-21, -0.0209424, -5.42458e-20, 0.999781, 0.0333333, 1, -1.56965e-24, -0.0741669, -1.16738e-25, 0.997246, 0.0666666, 1, -6.84789e-20, -0.157814, 4.2824e-19, 0.987469, 0.0999999, 1, -3.49543e-22, -0.25657, -9.27881e-23, 0.966526, 0.133333, 1, -1.67811e-21, -0.331722, -5.90078e-22, 0.943377, 0.166667, 1, -4.75219e-21, -0.369747, -1.89113e-21, 0.929133, 0.2, 1, 9.24098e-19, -0.381575, 2.2582e-18, 0.924338, 0.233333, 1, -1.64972e-20, -0.378233, -6.74054e-21, 0.92571, 0.266667, 1, -1.8058e-18, -0.371508, -4.45948e-18, 0.92843, 0.3, 1, 5.83917e-18, -0.360245, 2.25493e-18, 0.932858, 0.333333, 1, -5.59813e-18, -0.345629, -2.06195e-18, 0.938371, 0.366667, 1, -5.23229e-18, -0.327777, -1.81531e-18, 0.944755, 0.4, 1, 4.18632e-18, -0.306855, -1.32315e-17, 0.951756, 0.433333, 1, -8.68806e-18, -0.283093, -2.56443e-18, 0.959092, 0.466667, 1, 4.01014e-18, -0.256347, 1.54211e-17, 0.966585, 0.5, 1, -6.78334e-18, -0.228052, -1.58882e-18, 0.973649, 0.566667, 1, -2.27934e-18, -0.169211, 4.18512e-17, 0.98558, 0.6, 1, 3.98064e-18, -0.139942, 2.8594e-17, 0.99016, 0.633333, 1, 3.15152e-18, -0.112388, 2.8289e-17, 0.993665, 0.666667, 1, -3.52988e-20, -0.0869195, -3.07982e-21, 0.996215, 0.7, 1, -2.30199e-20, -0.0639875, -1.47601e-21, 0.997951, 0.733333, 1, 2.43277e-18, -0.0439738, 1.07082e-19, 0.999033, 0.766667, 1, -5.91108e-21, -0.0271912, -1.60789e-22, 0.99963, 0.8, 1, -2.15573e-21, -0.0150911, -3.25359e-23, 0.999886, 0.833333, 1, -4.89267e-22, -0.00662564, -3.24178e-24, 0.999978, 0.866667, 1, 4.98996e-20, -0.00179933, 2.77557e-17, 0.999998, 0.9, 1, -9.24446e-33, -3.08149e-33, 0, 1)
tracks/3/type = "rotation_3d"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002/Plane_001")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = PackedFloat32Array(0, 1, 0, 0, -0.000413645, 1, 0.0333333, 1, 0, 0, -0.00152013, 0.999999, 0.0666666, 1, 0, 0, -0.0034612, 0.999994, 0.0999999, 1, 0, 0, -0.00624111, 0.999981, 0.133333, 1, 0, 0, -0.0101454, 0.999949, 0.166667, 1, 0, 0, -0.0148951, 0.999889, 0.2, 1, 0, 0, -0.0204897, 0.99979, 0.233333, 1, 0, 0, -0.0269278, 0.999637, 0.266667, 1, 0, 0, -0.0342066, 0.999415, 0.3, 1, 0, 0, -0.0425975, 0.999092, 0.333333, 1, 0, 0, -0.0518109, 0.998657, 0.366667, 1, 0, 0, -0.061836, 0.998086, 0.4, 1, 0, 0, -0.0726602, 0.997357, 0.433333, 1, 0, 0, -0.0842689, 0.996443, 0.466667, 1, 0, 0, -0.0968935, 0.995295, 0.5, 1, 0, 0, -0.110246, 0.993904, 0.533333, 1, 0, 0, -0.1243, 0.992245, 0.566667, 1, 0, 0, -0.139026, 0.990289, 0.6, 1, 0, 0, -0.154395, 0.988009, 0.633333, 1, 0, 0, -0.170567, 0.985346, 0.666667, 1, 0, 0, -0.187276, 0.982307, 0.7, 1, 0, 0, -0.204479, 0.978871, 0.733333, 1, 0, 0, -0.22213, 0.975017, 0.766667, 1, 0, 0, -0.240181, 0.970728, 0.8, 1, 0, 0, -0.258699, 0.965958, 0.833333, 1, 0, 0, -0.27747, 0.960734, 0.866667, 1, 0, 0, -0.296439, 0.955052, 0.9, 1, 0, 0, -0.315548, 0.94891, 1.1, 1, 0, 0, -0.429616, 0.903012, 1.13333, 1, 0, 0, -0.447854, 0.894107, 1.16667, 1, 0, 0, -0.46571, 0.884938, 1.2, 1, 0, 0, -0.483141, 0.875543, 1.23333, 1, 0, 0, -0.500108, 0.865963, 1.26667, 1, 0, 0, -0.516575, 0.856242, 1.3, 1, 0, 0, -0.532372, 0.846511, 1.33333, 1, 0, 0, -0.547578, 0.836755, 1.36667, 1, 0, 0, -0.562172, 0.82702, 1.4, 1, 0, 0, -0.576136, 0.817354, 1.43333, 1, 0, 0, -0.589454, 0.807802, 1.46667, 1, 0, 0, -0.601933, 0.798546, 1.5, 1, 0, 0, -0.61373, 0.789516, 1.53333, 1, 0, 0, -0.624841, 0.780752, 1.56667, 1, 0, 0, -0.635266, 0.772294, 1.6, 1, 0, 0, -0.645005, 0.764179, 1.63333, 1, 0, 0, -0.653859, 0.756616, 1.66667, 1, 0, 0, -0.662029, 0.749478, 1.7, 1, 0, 0, -0.669521, 0.742793, 1.73333, 1, 0, 0, -0.676344, 0.736586, 1.76667, 1, 0, 0, -0.682505, 0.730881, 1.8, 1, 0, 0, -0.68781, 0.725891, 1.83333, 1, 0, 0, -0.69247, 0.721447, 1.86667, 1, 0, 0, -0.696496, 0.717561, 1.9, 1, 0, 0, -0.699897, 0.714244, 1.93333, 1, 0, 0, -0.70268, 0.711506, 1.96667, 1, 0, 0, -0.704655, 0.70955, 2, 1, 0, 0, -0.706031, 0.708181, 2.03333, 1, 0, 0, -0.706814, 0.707399)
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("OpenCamera:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 2.03333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.58451, -0.596645), Vector3(0, 1.58451, -0.482905), Vector3(0, 1.58451, 0.632822)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("OpenCamera:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 2.03333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 3.14159, 0), Vector3(-0.244346, 3.14159, 0), Vector3(0, 3.14159, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4uson"]
_data = {
&"open": SubResource("Animation_h5uq7")
}

[sub_resource type="BoxMesh" id="BoxMesh_phiqp"]

[node name="Door" instance=ExtResource("1_nu3f6")]
script = ExtResource("2_dch8f")
metadata/_edit_lock_ = true

[node name="Plane" parent="Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode" index="0"]
visible = false

[node name="Plane_004" parent="Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode" index="1"]
visible = false

[node name="Plane_005" parent="Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002" index="2"]
transform = Transform3D(1, 0.000827291, 0, -0.000827291, 1, 0, 0, 0, 1, -0.435135, -0.101397, 0.248962)

[node name="Plane_001" parent="Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002" index="3"]
transform = Transform3D(1, 0.000827291, 0, -0.000827291, 1, 0, 0, 0, 1, -0.435135, -0.101397, 0.248962)

[node name="CollisionHitbox" type="StaticBody3D" parent="Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002/Plane_001/Plane_001_Door__Door_C_jpg_0" index="0"]
unique_name_in_owner = true
transform = Transform3D(1.00479, 9.90929e-11, 0.000831251, 0.000831251, -1.1978e-07, -1.00479, 0, 1.00479, -1.1978e-07, 0.435051, 0.101757, -0.248962)
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002/Plane_001/Plane_001_Door__Door_C_jpg_0/CollisionHitbox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00360107, 0.98572, 0.0843811)
shape = SubResource("BoxShape3D_p4dlk")

[node name="DoorSoundPlayer" type="AudioStreamPlayer3D" parent="Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002/Plane_001/Plane_001_Door__Door_C_jpg_0" index="1"]
unique_name_in_owner = true
transform = Transform3D(1.00479, 9.9094e-11, 0.000831261, 0.00083126, -1.1978e-07, -1.00479, 0, 1.00479, -1.1978e-07, 0.435051, 0.101757, 0.744764)
stream = SubResource("AudioStreamRandomizer_1sj1c")

[node name="InteractionHitbox" type="Area3D" parent="Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002/Plane_001/Plane_001_Door__Door_C_jpg_0" index="2"]
unique_name_in_owner = true
transform = Transform3D(1.00479, 9.9094e-11, 0.000831261, 0.00083126, -1.1978e-07, -1.00479, 0, 1.00479, -1.1978e-07, 0.435051, 0.101757, 0.755826)
collision_layer = 8
collision_mask = 0
monitoring = false
script = ExtResource("2_s446a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002/Plane_001/Plane_001_Door__Door_C_jpg_0/InteractionHitbox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000259399, -0.00411987, 0.0787315)
shape = SubResource("BoxShape3D_7djw8")

[node name="Plane_003" parent="Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002/Plane_001" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 2.64698e-23, 0, -2.64698e-23, 1, 0.850496, 0.0166004, 0.78184)

[node name="Circle_002" parent="Sketchfab_model/b37afcbbf8564243bc40699160c032e0_fbx/Object_2/RootNode/Plane_002/Plane_001" index="3"]
transform = Transform3D(0.999123, 1.08515e-19, -0.0418756, -1.0842e-19, 1, 4.54417e-21, 0.0418756, -2.98884e-26, 0.999123, 0.809703, 0.0427378, 0.802855)

[node name="AnimationPlayer" parent="." index="1"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_bqqq5"),
&"Door": SubResource("AnimationLibrary_4uson")
}
speed_scale = 2.0

[node name="OpenCamera" type="Camera3D" parent="." index="2"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 2.53518e-06, 0, 1, 0, -2.53518e-06, 0, -1, 0, 1.58451, -0.596645)

[node name="PlayerTeleport" type="Node3D" parent="." index="3"]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0.633)

[node name="LockedModel" type="MeshInstance3D" parent="." index="4"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13931, 0)
visible = false
mesh = SubResource("BoxMesh_phiqp")

[node name="BlockedModels" type="Node3D" parent="." index="5"]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="Planks" type="Node3D" parent="BlockedModels" index="0"]
visible = false
metadata/_edit_lock_ = true

[node name="plank_1" parent="BlockedModels/Planks" index="0" instance=ExtResource("7_gh2qx")]
transform = Transform3D(0.00682976, -5.45077e-12, -0.000124699, -0.000124699, -2.98538e-10, -0.00682976, 0, 0.0068309, -2.98588e-10, 0, 1.29321, -0.113187)

[node name="plank_2" parent="BlockedModels/Planks" index="1" instance=ExtResource("8_x7r50")]
transform = Transform3D(0.00723535, -3.69962e-11, 0.000846374, -0.000846374, -3.16267e-10, 0.00723535, -7.88055e-18, -0.00728469, -3.18424e-10, 0, 0.394383, -0.121839)

[node name="plank_3" parent="BlockedModels/Planks" index="2" instance=ExtResource("9_xpupl")]
transform = Transform3D(0.00658534, 5.35741e-11, 0.00122563, 0.00122563, -2.87854e-10, -0.00658534, 5.64504e-18, 0.00669842, -2.92797e-10, 0, 1.66215, -0.113552)

[node name="plank_4" parent="BlockedModels/Planks" index="3" instance=ExtResource("10_th7kg")]
transform = Transform3D(0.00586318, 7.82915e-11, 0.0017911, 0.0017911, -2.56288e-10, -0.00586318, 0, 0.00613066, -2.6798e-10, 0, 0.82204, -0.116175)
